<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".design.forgotpasswordsecond.ForgotPasswordSecondActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_15sdp">

        <ImageView
            android:id="@+id/ivLoginLogo"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/login_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFpsYourPasswordHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Your new password"
            android:textColor="@color/black"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/ivLoginLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etFpsNewPassword"
            style="@style/login_editText"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/enter_your_new_password"
            android:inputType="textPassword"
            android:maxLength="25"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFpsYourPasswordHeading" />

        <EditText
            android:id="@+id/etFpsConfirmPassword"
            style="@style/login_editText"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/enter_your_confirm_password"
            android:inputType="textPassword"
            android:maxLength="25"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etFpsNewPassword" />

        <TextView
            android:id="@+id/tvFpsSubmit"
            style="@style/login_button_style"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/submit"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etFpsConfirmPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>